--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/contactbook
+spring.datasource.url=jdbc:postgresql://localhost:5432/contactbooks
 spring.datasource.database=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=123456
